:sparkles: 관리자
- 카테고리 수정 기능 구현